Fix tagline position when scrollbar is present

--- a/site/web/app/themes/sage/resources/styles/common/global.scss
+++ b/site/web/app/themes/sage/resources/styles/common/global.scss
@@ -2,6 +2,10 @@
   display: none;
 }
 
+body {
+  min-height: 101vh;
+}
+
 #main {
   body.home & {
     padding: 1.5rem;
@@ -14,5 +18,5 @@
 }
 
 .progress-bar {
-  transition: width 2s;
+  transition: 1s;
 }
