--- a/site/web/app/themes/sage/resources/styles/layouts/banner.scss
+++ b/site/web/app/themes/sage/resources/styles/layouts/banner.scss
@@ -4,4 +4,8 @@
   #btnDot {
     left: calc(100vw - 2.5rem);
   }
+
+  #tagline {
+    right: 2rem;
+  }
 }
